# map2gazebo

./: CMakeLists.txt  setup.py
nodes/: map2gazebo.py
